fix alignment of network names

--- a/mininapse.css
+++ b/mininapse.css
@@ -527,6 +527,15 @@ kbd {
     background: none;
 }
 
+/* fix alignment of network names */
+#sidebar .chan:first-child {
+    margin-left: -20px;
+}
+
+#sidebar .network .collapse-network {
+    padding-left: 0px;
+}
+
 /* ****** Public css mods ****** */
 /* Better CSS box */
 #user-specified-css-input {
